--- a/_site.yml
+++ b/_site.yml
@@ -15,4 +15,4 @@ navbar:
       href: https://www.linkedin.com/in/mariaserafini/
 output:
   html_document:
-    theme: cerulean
+    theme: sandstone
