--- a/_site.yml
+++ b/_site.yml
@@ -3,20 +3,18 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
-      href: about.html
-    - text: "Plots"
-      href: plots.html
-    - text: "Plotly Plots"
-      href: plotly.html
     - text: "Dashboard"
       href: dashboard.html      
+    - text: "Resume"
+      href: https://drive.google.com/file/d/1yIUcPCw4donjhBT4iUrVsJN6U8XHLGU-/view?usp=sharing
     - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
+      href: mailto:<mas2514@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/<maria-serafini>/
+      href: https://github.com/maria-serafini
     - icon: fa-brands fa-linkedin
       href: https://www.linkedin.com/in/mariaserafini/
 output:
   html_document:
-    theme: sandstone
+    theme: flatly
+    
+    
